--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
+    <!-- Hello World Program with React -->
+    <script>
+        // Creating a H1 Tag
+        const heading = React.createElement("h1", {}, "HELLO WORLD FROM REACT");
+        // Creating a root, A place where all the react code is rendered
+        const root = ReactDOM.createRoot(document.createElementById("root"));
+        // so inside root we render heading element, may be component
+        root.render(heading);
+    </script>
+    <!-- Episode 1 Part 02 completed here -->
+
     <script type="text/javascript" src="./App.js"></script>
 </body>
 </html>
