--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Using React</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div id="root"></div>
@@ -22,14 +23,14 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
     <!-- Hello World Program with React -->
-    <script>
+    <!-- <script>
         // Creating a H1 Tag
         const heading = React.createElement("h1", {}, "HELLO WORLD FROM REACT");
         // Creating a root, A place where all the react code is rendered
-        const root = ReactDOM.createRoot(document.createElementById("root"));
+        const root = ReactDOM.createRoot(document.getElementById("root"));
         // so inside root we render heading element, may be component
         root.render(heading);
-    </script>
+    </script> -->
     <!-- Episode 1 Part 02 completed here -->
 
     <script type="text/javascript" src="./App.js"></script>
