Episode 2 Completed Igniting our app

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         * </div>
      -->
     
-
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- Commented below lines as we installed npm install react and npm install react-dom -->
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
 
     <!-- Hello World Program with React -->
     <!-- <script>
@@ -33,6 +33,6 @@
     </script> -->
     <!-- Episode 1 Part 02 completed here -->
 
-    <script type="text/javascript" src="./App.js"></script>
+    <script type="module" src="./App.js"></script>
 </body>
 </html>
