--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     </script> -->
     <!-- Episode 1 Part 02 completed here -->
 
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
 </body>
 </html>
